src/components/inputs/select/View.scss
@import "~nti-style-common";

.nti-select-input {
	position: relative;

	&.open {
		& > ul.options {
			display: block;
		}
	}

	&.focused {
		.select-label {
			border-color: $primary-blue;
		}
	}

	& > ul.options {
		margin: 0;
		padding: 0;
		list-style: none;
		position: absolute;
		width: 100%;
		top: calc(100% - 1px);
		left: 0;
		background: white;
		box-shadow: 1px 2px 2px 0 rgba(0, 0, 0, 0.1);
		border: 1px solid $border-grey-light;
		z-index: 99;
		backface-visibility: hidden;

		display: none;
	}


	.select-label {
		border-radius: 2px;
		background-color: $panel-background;
		border: 1px solid $border-grey-light;
		min-height: 2rem;
		position: relative;

		&:not(.searchable), &.has-selected {
			.nti-text-input {
				text-indent: -9999px;
			}
		}

		&.searchable:not(.has-selected) {
			.selected-option {
				display: none;
			}
		}

		.nti-text-input {
			border-radius: 0;
			border: none;
			background-color: white;
			width: 100%;
		}

		.selected-option {
			position: absolute;
			top: 0;
			left: 0;
			width: 100%;
			height: 100%;
		}

		i {
			position: absolute;
			top: 50%;
			left: auto;
			right: 0.5rem;
			width: 1rem;
			height: 1rem;
			margin-top: -0.5rem;
			color: $tertiary-grey;
		}
	}
}

